Header and top body complete

--- a/index.html
+++ b/index.html
@@ -3,6 +3,18 @@ layout: default
 ---
 
 <div class="home">
+  
+  <h2>Launching Spring 2016</h2>
+
+  <h3>Mang-la-Desh! is a Connecticut based company.<br>
+  We are Innovators of artisan and lingerie inspired swimwear </h3>
+
+  <p>Each swimsuit is an eclectic and unique design creation with an eye-catching surprise factor. The woman who wears Mang-la-Desh! lives in an excited state of mind always propelling forward with a never-ending passion for life. We like to say, Fuoco Nelle Vene!, she has fire in the veins! Mang-la-Desh! swimwear is confident, bold, sexy, and wild. It combines technology, handcrafts and colors that are always fun and alive.</p>
+
+  <h3>We cannot wait to share it with you!</h3>
+
+</div>
+<div class="home pink">
 
   <!-- Begin MailChimp Signup Form -->
   <link href="//cdn-images.mailchimp.com/embedcode/classic-081711.css" rel="stylesheet" type="text/css">
