--- a/index.html
+++ b/index.html
@@ -11,46 +11,13 @@ layout: default
 
   <p>Each swimsuit is an eclectic and unique design creation with an eye-catching surprise factor. The woman who wears Mang-la-Desh! lives in an excited state of mind always propelling forward with a never-ending passion for life. We like to say, Fuoco Nelle Vene!, she has fire in the veins! Mang-la-Desh! swimwear is confident, bold, sexy, and wild. It combines technology, handcrafts and colors that are always fun and alive.</p>
 
-  <h3>We cannot wait to share it with you!</h3>
+  <h3>
+  	<img src="{{ 'img/cant-wait.png' | prepend: site.baseurl }}" alt="We cannot wait to share it with you!" height="50" width="515">
+  </h3>
 
 </div>
 <div class="home pink">
 
-  <!-- Begin MailChimp Signup Form -->
-  <link href="//cdn-images.mailchimp.com/embedcode/classic-081711.css" rel="stylesheet" type="text/css">
-  <style type="text/css">
-  	#mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif; }
-  	/* Add your own MailChimp form style overrides in your site stylesheet or in this style block.
-  	   We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
-  </style>
-  <div id="mc_embed_signup">
-  <form action="//mangladesh.us10.list-manage.com/subscribe/post?u=0409baef71660e6dedb0e346b&amp;id=886676b7fe" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-      <div id="mc_embed_signup_scroll">
-  	<h2>Subscribe to our mailing list</h2>
-  <div class="indicates-required"><span class="asterisk">*</span> indicates required</div>
-  <div class="mc-field-group">
-  	<label for="mce-EMAIL">Email Address  <span class="asterisk">*</span>
-  </label>
-  	<input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
-  </div>
-  <div class="mc-field-group">
-  	<label for="mce-FNAME">First Name </label>
-  	<input type="text" value="" name="FNAME" class="" id="mce-FNAME">
-  </div>
-  <div class="mc-field-group">
-  	<label for="mce-LNAME">Last Name </label>
-  	<input type="text" value="" name="LNAME" class="" id="mce-LNAME">
-  </div>
-  	<div id="mce-responses" class="clear">
-  		<div class="response" id="mce-error-response" style="display:none"></div>
-  		<div class="response" id="mce-success-response" style="display:none"></div>
-  	</div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-      <div style="position: absolute; left: -5000px;"><input type="text" name="b_0409baef71660e6dedb0e346b_886676b7fe" tabindex="-1" value=""></div>
-      <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
-      </div>
-  </form>
-  </div>
-  <script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script><script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
-  <!--End mc_embed_signup-->
+  {% include form.html %}
 
 </div>
